data/test/type_check/fail/declaration_4.v
localparam x = 0;
wire x = 0;
